--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -71,6 +71,9 @@
     <!-- Separator between current time and max time in control bar, optional times [CHAR_LIMIT=5] -->
     <string name="times_separator"> / </string>
 
+    <!-- Intent action meant to invoke user TOS flow -->
+    <string name="user_tos_activity_intent">com.android.car.SHOW_USER_TOS_ACTIVITY</string>
+
     <!--
         A list of package names to exclude from the app selector when filtering is active.
         DO NOT TRANSLATE.
