Add GTOS banner to launcher
Bug: 270412647
Test: Manual testing
Change-Id: I17295fb6cefffd45d60be2a909d7a6a44ba46772

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -115,4 +115,9 @@
     -->
     <string-array name="packages_hidden_from_recents" translatable="false">
     </string-array>
+
+    <!-- TosBanner strings -->
+    <string name="banner_title_text">To use user tos disabled apps, agree to User tos</string>
+    <string name="banner_review_button_text">Review</string>
+    <string name="banner_dismiss_button_text">Not Now</string>
 </resources>
