Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I2f5371f35a48cdaa94a069f08fe9850590d836bb

--- a/res/values-en-rCA/strings.xml
+++ b/res/values-en-rCA/strings.xml
@@ -46,6 +46,8 @@
     <string name="show_debug_apps" msgid="4521073121286325786">"Show debug apps"</string>
     <!-- no translation found for times_separator (6180368193321715816) -->
     <skip />
+    <!-- no translation found for user_tos_activity_intent (3588117091802148320) -->
+    <skip />
     <!-- no translation found for recents_empty_state_text (6703106170272215731) -->
     <skip />
     <!-- no translation found for recents_clear_all_text (2088678071417053923) -->
