Use suw intent to launch value prop screen for accepting tos
Bug: 276779487
Bug: 276975875
Test: atest AppLauncherUtilsTest#testGetLauncherAppsWithEnableAndTosDisabledApps, AppLauncherUtilsTest#testGetLauncherAppsWithEnableAndTosDisabledDistractionOptimizedApps
Change-Id: I05592b9b6388fe49a8e22d657d2dea8d5b4d631e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -71,8 +71,13 @@
     <!-- Separator between current time and max time in control bar, optional times [CHAR_LIMIT=5] -->
     <string name="times_separator"> / </string>
 
-    <!-- Intent action meant to invoke user TOS flow -->
-    <string name="user_tos_activity_intent">com.android.car.SHOW_USER_TOS_ACTIVITY</string>
+    <!-- Intent action meant to invoke user TOS flow.
+         The intent URI has to be formatted according to Intent.URI_INTENT_SCHEME
+         URI, for example should contain the intent action and any extras if necessary:
+         "intent:#Intent;action=com.android.car.SHOW_USER_TOS_ACTIVITY;B.show_value_prop=true;end"
+    -->
+
+    <string name="user_tos_activity_intent">intent:#Intent;action=com.android.car.SHOW_USER_TOS_ACTIVITY;B.show_value_prop=true;end</string>
 
     <!--
         A list of package names to exclude from the app selector when filtering is active.
