Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I38241769d923e206609e041ec67be775ceb47a37

--- a/res/values-en-rCA/strings.xml
+++ b/res/values-en-rCA/strings.xml
@@ -54,4 +54,10 @@
     <skip />
     <!-- no translation found for failure_opening_recent_task_message (9097595793150874357) -->
     <skip />
+    <!-- no translation found for banner_title_text (8769404950674630387) -->
+    <skip />
+    <!-- no translation found for banner_review_button_text (8263234087487949865) -->
+    <skip />
+    <!-- no translation found for banner_dismiss_button_text (333850829842822963) -->
+    <skip />
 </resources>
