--- a/res/values-en-rXC/strings.xml
+++ b/res/values-en-rXC/strings.xml
@@ -43,9 +43,14 @@
     <string name="hide_debug_apps" msgid="6128313544379622475">"‎‏‎‎‎‎‎‏‎‏‏‏‎‎‎‏‎‎‏‏‎‎‎‎‎‎‏‏‏‏‏‏‏‏‎‏‎‏‎‏‎‎‎‎‏‏‎‎‎‎‏‎‎‏‎‎‏‎‏‏‎‎‏‏‎‎‎‎‏‏‎‎‏‏‏‏‎‏‏‎‎‏‏‎‎‏‎‎‎‏‎‎‏‎‏‏‎Hide debug apps‎‏‎‎‏‎"</string>
     <string name="show_debug_apps" msgid="4521073121286325786">"‎‏‎‎‎‎‎‏‎‏‏‏‎‎‎‏‎‎‏‏‎‎‎‎‎‎‏‏‏‏‏‏‎‏‏‏‏‏‎‏‎‏‏‏‏‏‎‎‎‎‏‎‏‎‎‎‎‎‎‏‏‎‎‏‏‎‏‎‏‎‏‏‏‎‏‎‏‏‎‏‎‎‎‎‏‏‎‎‎‎‏‏‎‏‎‎Show debug apps‎‏‎‎‏‎"</string>
     <string name="times_separator" msgid="6180368193321715816">"‎‏‎‎‎‎‎‏‎‏‏‏‎‎‎‏‎‎‏‏‎‎‎‎‎‎‏‏‏‏‏‏‏‏‎‏‎‏‎‏‏‏‎‎‎‏‎‏‎‎‎‏‎‏‎‎‎‎‏‎‎‎‎‎‎‏‏‏‏‎‎‎‎‎‎‏‎‎‎‎‎‏‎‎‏‎‎‎‎‏‏‎‏‎‎‎‎/‎‏‎‎‏‎"</string>
-    <!-- no translation found for user_tos_activity_intent (3588117091802148320) -->
-    <skip />
+    <string name="user_tos_activity_intent" msgid="3588117091802148320">"‎‏‎‎‎‎‎‏‎‏‏‏‎‎‎‏‎‎‏‏‎‎‎‎‎‎‏‏‏‏‏‏‎‏‏‎‎‎‏‏‏‎‎‏‎‏‏‏‎‎‎‏‏‎‏‎‏‏‏‏‎‏‏‏‏‏‏‏‏‎‏‎‏‎‏‏‏‏‏‏‏‏‎‏‏‎‏‏‏‏‎‎‎‎‎‎com.android.car.SHOW_USER_TOS_ACTIVITY‎‏‎‎‏‎"</string>
     <string name="recents_empty_state_text" msgid="6703106170272215731">"‎‏‎‎‎‎‎‏‎‏‏‏‎‎‎‏‎‎‏‏‎‎‎‎‎‎‏‏‏‏‏‏‏‏‎‏‏‏‎‏‎‎‎‎‎‏‏‎‎‎‏‏‎‏‏‏‏‎‎‎‏‏‎‎‎‎‎‏‏‎‏‎‏‏‎‎‏‏‎‏‏‏‏‏‎‎‏‎‏‎‏‏‎‎‏‏‎No recent items‎‏‎‎‏‎"</string>
     <string name="recents_clear_all_text" msgid="2088678071417053923">"‎‏‎‎‎‎‎‏‎‏‏‏‎‎‎‏‎‎‏‏‎‎‎‎‎‎‏‏‏‏‏‎‏‏‏‏‎‎‏‏‏‏‏‏‎‎‎‏‏‏‏‎‎‏‏‎‏‎‎‎‏‏‏‏‎‎‎‎‎‎‏‏‏‏‎‏‏‎‎‎‏‎‎‎‏‎‏‏‏‎‎‎‏‏‎Clear All‎‏‎‎‏‎"</string>
     <string name="failure_opening_recent_task_message" msgid="9097595793150874357">"‎‏‎‎‎‎‎‏‎‏‏‏‎‎‎‏‎‎‏‏‎‎‎‎‎‎‏‏‏‏‏‏‏‏‏‏‏‏‏‎‎‏‎‎‎‎‎‏‎‎‏‎‎‏‏‏‎‎‏‎‏‏‎‎‎‎‏‏‏‎‎‎‏‏‎‏‏‎‎‎‏‎‎‏‎‎‏‎‏‏‏‏‎‏‎‏‎App isn\'t available‎‏‎‎‏‎"</string>
+    <!-- no translation found for banner_title_text (8769404950674630387) -->
+    <skip />
+    <!-- no translation found for banner_review_button_text (8263234087487949865) -->
+    <skip />
+    <!-- no translation found for banner_dismiss_button_text (333850829842822963) -->
+    <skip />
 </resources>
