--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -19,7 +19,7 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_title" msgid="1995858460392177468">"Car Launcher"</string>
     <string name="reset_appgrid_title" msgid="814562055108028366">"將應用程式網格重設為按字母排序"</string>
-    <string name="reset_appgrid_dialogue_message" msgid="8275758912490987735">"此功能會移除所有自訂順序。您要繼續嗎？"</string>
+    <string name="reset_appgrid_dialogue_message" msgid="8275758912490987735">"此功能會移除所有自訂順序。你要繼續嗎？"</string>
     <string name="app_launcher_title_all_apps" msgid="3215107396036838217">"所有應用程式"</string>
     <string name="app_launcher_title_media_only" msgid="4400886555907422816">"媒體應用程式"</string>
     <string name="app_launcher_stop_app_action" msgid="1081680842410279692">"停止應用程式"</string>
@@ -48,4 +48,10 @@
     <string name="recents_empty_state_text" msgid="6703106170272215731">"最近沒有任何項目"</string>
     <string name="recents_clear_all_text" msgid="2088678071417053923">"全部清除"</string>
     <string name="failure_opening_recent_task_message" msgid="9097595793150874357">"目前無法使用這個應用程式"</string>
+    <!-- no translation found for banner_title_text (8769404950674630387) -->
+    <skip />
+    <!-- no translation found for banner_review_button_text (8263234087487949865) -->
+    <skip />
+    <!-- no translation found for banner_dismiss_button_text (333850829842822963) -->
+    <skip />
 </resources>
