--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -33,6 +33,6 @@
     <string name="weather_app_name" msgid="8048146303519139993">"Временска прогноза"</string>
     <string name="fake_weather_main_text" msgid="8117240999340284429">"-- ° Претежно сончево"</string>
     <string name="fake_weather_footer_text" msgid="4570172025869749926">"Маунтин Вју • В: -- ° Н: -- °"</string>
-    <string name="hide_debug_apps" msgid="6128313544379622475">"Сокриј апликации за отстранување грешки"</string>
+    <string name="hide_debug_apps" msgid="6128313544379622475">"Скриј апликации за отстранување грешки"</string>
     <string name="show_debug_apps" msgid="4521073121286325786">"Прикажи апликации за отстранување грешки"</string>
 </resources>
