--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -23,6 +23,8 @@
     <string name="app_launcher_title_all_apps" msgid="3215107396036838217">"Бүх апп"</string>
     <string name="app_launcher_title_media_only" msgid="4400886555907422816">"Медиа аппууд"</string>
     <string name="app_launcher_stop_app_action" msgid="1081680842410279692">"Аппыг зогсоох"</string>
+    <!-- no translation found for app_launcher_app_info_action (6388181061002827660) -->
+    <skip />
     <string name="app_launcher_stop_app_success_toast_text" msgid="2117271772351005349">"<xliff:g id="APP_NAME">%1$s</xliff:g> зогссон."</string>
     <string name="app_launcher_stop_app_dialog_title" msgid="8276889322638001144">"Аппыг зогсоох уу?"</string>
     <string name="app_launcher_stop_app_dialog_text" msgid="3264059639436254372">"Хэрэв аппыг хүчээр зогсоовол буруу ажиллаж магадгүй."</string>
@@ -43,15 +45,11 @@
     <string name="hide_debug_apps" msgid="6128313544379622475">"Дебаг хийх аппуудыг нуух"</string>
     <string name="show_debug_apps" msgid="4521073121286325786">"Дебаг хийх аппуудыг харуулах"</string>
     <string name="times_separator" msgid="6180368193321715816">"/"</string>
-    <!-- no translation found for user_tos_activity_intent (6097193356935501673) -->
-    <skip />
+    <string name="user_tos_activity_intent" msgid="6097193356935501673">"intent:#Intent;action=com.android.car.SHOW_USER_TOS_ACTIVITY;B.show_value_prop=true;end"</string>
     <string name="recents_empty_state_text" msgid="6703106170272215731">"Ямар ч саяхны зүйл байхгүй"</string>
     <string name="recents_clear_all_text" msgid="2088678071417053923">"Бүгдийг арилгах"</string>
     <string name="failure_opening_recent_task_message" msgid="9097595793150874357">"Апп боломжгүй байна"</string>
-    <!-- no translation found for banner_title_text (8769404950674630387) -->
-    <skip />
-    <!-- no translation found for banner_review_button_text (8263234087487949865) -->
-    <skip />
-    <!-- no translation found for banner_dismiss_button_text (333850829842822963) -->
-    <skip />
+    <string name="banner_title_text" msgid="8769404950674630387">"Хэрэглэгчийн үйлчилгээний нөхцөлийг (TOS) идэвхгүй болгосон аппуудыг ашиглахын тулд Хэрэглэгчийн үйлчилгээний нөхцөлийг (TOS) зөвшөөрнө үү"</string>
+    <string name="banner_review_button_text" msgid="8263234087487949865">"Шалгах"</string>
+    <string name="banner_dismiss_button_text" msgid="333850829842822963">"Одоо биш"</string>
 </resources>
