Add CalmMode activity and QC provider to Launcher
Bug: 289412865
Test: atest CalmModeQCProviderTest
Change-Id: Ied9dde43ac1c3ccc90916f8c0573be1383536ce3

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string-array name="packages_hidden_from_recents" translatable="false">
     </string-array>
 
+    <!-- Calm mode strings -->
+    <string name="calm_mode_title">Calm mode</string>
 </resources>
