Add broadcast permissions for dock
The sender should aquire the permission to be able to broadcast events
to the dock. The receiver should aquire the permission to be able to
listen to the broadcasted events.

Bug: 301483111
Bug: 301482374
Test: atest CarDockLibTests CarDockUtilLibTests
Change-Id: Ideb80745f12eaaaf3af0c81b52ac1373c549fd6e

--- a/docklib/res/values/strings.xml
+++ b/docklib/res/values/strings.xml
@@ -16,4 +16,12 @@
   -->
 
 <resources>
+    <string name="broadcast_sender_permission_label">Dock broadcast sender</string>
+    <string name="broadcast_sender_permission_desc">
+        Permission required for package to broadcast events to the Dock.
+    </string>
+    <string name="broadcast_receiver_permission_label">Dock broadcast receiver</string>
+    <string name="broadcast_receiver_permission_desc">
+        Permission required for package listen to broadcast events for the Dock.
+    </string>
 </resources>
