Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Id6d14045090ffb4cf37bde7024270ca309c485f1

--- a/app/res/values-ta/strings.xml
+++ b/app/res/values-ta/strings.xml
@@ -34,6 +34,5 @@
     <string name="recents_empty_state_text" msgid="8228569970506899117">"சமீபத்தியவை இல்லை"</string>
     <string name="recents_clear_all_text" msgid="3594272268167720553">"அனைத்தையும் அழி"</string>
     <string name="failure_opening_recent_task_message" msgid="963567570097465902">"ஆப்ஸ் கிடைக்கவில்லை"</string>
-    <!-- no translation found for calm_mode_title (4364804976931157567) -->
-    <skip />
+    <string name="calm_mode_title" msgid="4364804976931157567">"அமைதிப் பயன்முறை"</string>
 </resources>
