--- a/app/res/values-ko/strings.xml
+++ b/app/res/values-ko/strings.xml
@@ -34,6 +34,5 @@
     <string name="recents_empty_state_text" msgid="8228569970506899117">"최근 항목이 없습니다."</string>
     <string name="recents_clear_all_text" msgid="3594272268167720553">"모두 지우기"</string>
     <string name="failure_opening_recent_task_message" msgid="963567570097465902">"앱을 사용할 수 없음"</string>
-    <!-- no translation found for calm_mode_title (4364804976931157567) -->
-    <skip />
+    <string name="calm_mode_title" msgid="4364804976931157567">"고요 모드"</string>
 </resources>
