--- a/app/res/values-zh-rCN/strings.xml
+++ b/app/res/values-zh-rCN/strings.xml
@@ -34,6 +34,5 @@
     <string name="recents_empty_state_text" msgid="8228569970506899117">"没有最近用过的项目"</string>
     <string name="recents_clear_all_text" msgid="3594272268167720553">"全部清除"</string>
     <string name="failure_opening_recent_task_message" msgid="963567570097465902">"应用无法打开"</string>
-    <!-- no translation found for calm_mode_title (4364804976931157567) -->
-    <skip />
+    <string name="calm_mode_title" msgid="4364804976931157567">"平静模式"</string>
 </resources>
