Add pin shortcut to Dock items
Bug: 313655199
Bug: 301482374
Test: manual, attached video in bug, atest CarDockLibTests CarDockUtilLibTests
Change-Id: I77f37e802656b4c73bbd7b04ae3ade4e404a2d3c

--- a/docklib-util/res/values/strings.xml
+++ b/docklib-util/res/values/strings.xml
@@ -18,4 +18,5 @@
 <resources>
     <!-- todo(b/314817575): update the string to final value -->
     <string name="dock_pin_shortcut_label">Pin to the dock</string>
+    <string name="dock_unpin_shortcut_label">Unpin from the dock</string>
 </resources>
