Update Calm mode design
Update layouts and styles to match new UX design

Test: atest tests/src/com/android/car/carlauncher/calmmode, manual
Bug: 315983310
Change-Id: I3d68421672ec11f6ec74db1c0bf95ebea2420268

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -56,4 +56,5 @@
 
     <!-- Calm mode strings -->
     <string name="calm_mode_title">Calm mode</string>
+    <string name="calm_mode_separator" translatable="false">\u0020\u0020\u0020\u2022\u0020\u0020\u0020</string>
 </resources>
