--- a/libs/car-launcher-common/res/values-bg/strings.xml
+++ b/libs/car-launcher-common/res/values-bg/strings.xml
@@ -19,14 +19,9 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="dock_pin_shortcut_label" msgid="7319916279393348946">"Фиксиране на приложението"</string>
     <string name="dock_unpin_shortcut_label" msgid="1657441916649851101">"Освобождаване на приложението"</string>
-    <!-- no translation found for stop_app_shortcut_label (5893149773635675147) -->
-    <skip />
-    <!-- no translation found for app_info_shortcut_label (6724408677044314793) -->
-    <skip />
-    <!-- no translation found for stop_app_dialog_title (7027389231920405129) -->
-    <skip />
-    <!-- no translation found for stop_app_dialog_text (4997162043741899166) -->
-    <skip />
-    <!-- no translation found for stop_app_success_toast_text (3740858295088091414) -->
-    <skip />
+    <string name="stop_app_shortcut_label" msgid="5893149773635675147">"Спиране на приложението"</string>
+    <string name="app_info_shortcut_label" msgid="6724408677044314793">"Информация от приложенията"</string>
+    <string name="stop_app_dialog_title" msgid="7027389231920405129">"Да се спре ли приложението?"</string>
+    <string name="stop_app_dialog_text" msgid="4997162043741899166">"Ако принудително спрете приложение, то може да не функционира правилно."</string>
+    <string name="stop_app_success_toast_text" msgid="3740858295088091414">"Приложението <xliff:g id="APP_NAME">%1$s</xliff:g> е спряно."</string>
 </resources>
