--- a/libs/car-launcher-common/res/values-sw/strings.xml
+++ b/libs/car-launcher-common/res/values-sw/strings.xml
@@ -19,14 +19,9 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="dock_pin_shortcut_label" msgid="7319916279393348946">"Bandika programu"</string>
     <string name="dock_unpin_shortcut_label" msgid="1657441916649851101">"Bandua programu"</string>
-    <!-- no translation found for stop_app_shortcut_label (5893149773635675147) -->
-    <skip />
-    <!-- no translation found for app_info_shortcut_label (6724408677044314793) -->
-    <skip />
-    <!-- no translation found for stop_app_dialog_title (7027389231920405129) -->
-    <skip />
-    <!-- no translation found for stop_app_dialog_text (4997162043741899166) -->
-    <skip />
-    <!-- no translation found for stop_app_success_toast_text (3740858295088091414) -->
-    <skip />
+    <string name="stop_app_shortcut_label" msgid="5893149773635675147">"Zima programu"</string>
+    <string name="app_info_shortcut_label" msgid="6724408677044314793">"Maelezo ya programu"</string>
+    <string name="stop_app_dialog_title" msgid="7027389231920405129">"Ungependa kuzima programu?"</string>
+    <string name="stop_app_dialog_text" msgid="4997162043741899166">"Huenda programu isifanye kazi ipasavyo, iwapo utailazimisha kuzima."</string>
+    <string name="stop_app_success_toast_text" msgid="3740858295088091414">"Umezima <xliff:g id="APP_NAME">%1$s</xliff:g>."</string>
 </resources>
